@@ -1,18 +1,27 @@
-## Getting Started
+The provided code is a JavaFX application that allows users to enter a URL and then finds and displays the corresponding IP address. It consists of a simple GUI with a text field to input the URL, a button to trigger the IP address search, and a separate window to display the result.
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+To run the code, you'll need to set up a JavaFX development environment and ensure that you have the necessary libraries and dependencies. Here are the general steps to compile and run the code:
 
-## Folder Structure
+1. Install Java Development Kit (JDK): Ensure that you have JDK 8 or later installed on your computer.
 
-The workspace contains two folders by default, where:
+2. Set up JavaFX: Since JavaFX is not included in JDK 11 and later, you need to download and add the JavaFX libraries to your project. Refer to the official OpenJFX website for instructions on how to set up JavaFX: https://openjfx.io/openjfx-docs/
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
+3. Create the `MainScreen.java` file: Save the provided code in a file named `MainScreen.java`.
 
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
+4. Compile the Java code: Use the `javac` command to compile the Java code. Make sure you include the JavaFX library path in the classpath.
 
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
+```
+javac --module-path /path/to/javafx/libraries --add-modules javafx.controls MainScreen.java
+```
 
-## Dependency Management
+5. Run the Java application: Use the `java` command to run the JavaFX application. Again, specify the JavaFX library path in the module-path.
 
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
+```
+java --module-path /path/to/javafx/libraries --add-modules javafx.controls MainScreen
+```
+
+Replace `/path/to/javafx/libraries` with the actual path to the JavaFX libraries on your system. Depending on your operating system and development environment, the commands may vary slightly.
+
+If everything is set up correctly, the application should launch, and a window titled "IP Address Finder" will appear. You can enter a URL in the text field and click the "Find IP" button to see the IP address result in a separate window. If there is an issue with resolving the URL to an IP address, an appropriate error message will be displayed.
+
+Remember that JavaFX applications have specific requirements, and running them may differ based on the development environment you are using. If you encounter any issues or errors, make sure to check your JavaFX setup and classpath settings.
